--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ Introduction to statistical and critical thinking, including descriptive statist
 
 <ul>
   <li><b>Instructor:</b> <a href="http://gastonsanchez.com" target="_blank">Gaston Sanchez</a>
-  <li><b>email:</b> <code>gaston.stat at gmail.com</code> (see <a href="/syllabus#email-policy">email policy</a>)
+  <li><b>email:</b> <code>gaston.stat at gmail.com</code> (see <a href="../syllabus#email-policy">email policy</a>)
   <li><b>OH:</b> To be announced</li>
   <li><b>GSI:</b> To be announced</li>
   <li><b>Session Dates:</b> 01/19/16 - 05/17/16 </li>
