add GSI sections

--- a/index.html
+++ b/index.html
@@ -13,10 +13,121 @@ Introduction to statistical and critical thinking, including descriptive statist
 <ul>
   <li><b>Instructor:</b> <a href="http://gastonsanchez.com" target="_blank">Gaston Sanchez</a>
   <li><b>email:</b> <code>gaston.stat at gmail.com</code> (see <a href="syllabus#email-policy">email policy</a>)
-  <li><b>OH:</b> To be announced</li>
-  <li><b>GSI:</b> To be announced</li>
+  <li><b>OH:</b> TuTh 2:15pm-3:00pm</li>
+  <li><b>GSIs:</b> To be announced</li>
   <li><b>Session Dates:</b> 01/19/16 - 05/17/16 </li>
   <li><b>Class:</b> TuTh 9:30-11:00 in 155 <a href="https://www.google.com/maps/search/Univ+Cal+Berkeley+Dwinelle+Hall/@37.870918,-122.2629026" target="_blank">Dwinelle Hall</a></li>
   <li><b>Textbook:</b> Statistics (by Freedman, Pisani, and Purves)</li>
   <li><b>Final:</b> Wed, May-11, 11:30-2:30</li>
 <ul>
+
+
+<table>
+  <thead>
+    <tr>
+      <th align="left">Discussion</th>
+      <th align="left">Date</th>
+      <th align="left">Room</th>
+      <th align="left">GSI</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>101</td>
+      <td>MW 9-10A</td>
+      <td>71 Evans</td>
+      <td>Lee, D H</td>
+    </tr>
+    <tr>
+      <td>102</td>
+      <td>MW 9-10A</td>
+      <td>75 Evans</td>
+      <td>Cho, P J</td>
+    </tr>
+    <tr>
+      <td>103</td>
+      <td>MW 9-10A</td>
+      <td>81 Evans</td>
+      <td>Temani, G</td>
+    </tr>
+    <tr>
+      <td>104</td>
+      <td>MW 10-11A</td>
+      <td>3109 ETCHEVERRY</td>
+      <td>Pear, V A</td>
+    </tr>
+    <tr>
+      <td>105</td>
+      <td>MW 10-11A</td>
+      <td>3111 ETCHEVERRY</td>
+      <td>Temani, G</td>
+    </tr>
+    <tr>
+      <td>106</td>
+      <td>MW 10-11A</td>
+      <td>334 EVANS</td>
+      <td>Lee, D H</td>
+    </tr>
+    <tr>
+      <td>107</td>
+      <td>MW 11-12P</td>
+      <td>85 EVANS</td>
+      <td>Cho, P J</td>
+    </tr>
+    <tr>
+      <td>108</td>
+      <td>MW 11-12P</td>
+      <td>9 Evans</td>
+      <td>Pear, V A</td>
+    </tr>
+    <tr>
+      <td>109</td>
+      <td>MW 11-12P</td>
+      <td>87 Evans</td>
+      <td>Nadagouda, P</td>
+    </tr>
+    <tr>
+      <td>110</td>
+      <td>MW 1-2P</td>
+      <td>85 Evans</td>
+      <td>Brooks, J S</td>
+    </tr>
+    <tr>
+      <td>111</td>
+      <td>MW 1-2P</td>
+      <td>75 Evans</td>
+      <td>Singh, P</td>
+    </tr>
+    <tr>
+      <td>112</td>
+      <td>MW 2-3P</td>
+      <td>2 Evans</td>
+      <td>Nadagouda, P</td>
+    </tr>
+    <tr>
+      <td>113</td>
+      <td>MW 2-3P</td>
+      <td>4 Evans</td>
+      <td>Singh, P</td>
+    </tr>
+    <tr>
+      <td>114</td>
+      <td>MW 3-4P</td>
+      <td>75 Evans</td>
+      <td>Brooks, J S</td>
+    </tr>
+    <tr>
+      <td>115</td>
+      <td>MW 3-4P</td>
+      <td>71 Evans</td>
+      <td>Sriram, A</td>
+    </tr>
+    <tr>
+      <td>117</td>
+      <td>MW 4-5P</td>
+      <td>4 Evans</td>
+      <td>Sriram, A</td>
+    </tr>
+  </tbody>
+</table>
+
