add Discussions heading before table of GSIs

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@ Introduction to statistical and critical thinking, including descriptive statist
   <li><b>Final:</b> Wed, May-11, 11:30-2:30</li>
 <ul>
 
+<hr>
+
+<h4>Discussions</h4>
 
 <table>
   <thead>
