--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@ Introduction to statistical and critical thinking, including descriptive statist
   <li><b>Instructor:</b> <a href="http://gastonsanchez.com" target="_blank">Gaston Sanchez</a>
   <li><b>email:</b> <code>gaston.stat at gmail.com</code> (see <a href="syllabus#email-policy">email policy</a>)
   <li><b>OH:</b> TuTh 2:15pm-3:00pm</li>
-  <li><b>GSIs:</b> To be announced</li>
   <li><b>Session Dates:</b> 01/19/16 - 05/17/16 </li>
   <li><b>Class:</b> TuTh 9:30-11:00 in 155 <a href="https://www.google.com/maps/search/Univ+Cal+Berkeley+Dwinelle+Hall/@37.870918,-122.2629026" target="_blank">Dwinelle Hall</a></li>
   <li><b>Textbook:</b> Statistics (by Freedman, Pisani, and Purves)</li>
@@ -39,97 +38,97 @@ Introduction to statistical and critical thinking, including descriptive statist
       <td>101</td>
       <td>MW 9-10A</td>
       <td>71 Evans</td>
-      <td>Lee, D H</td>
+      <td>Lee, Daniel</td>
     </tr>
     <tr>
       <td>102</td>
       <td>MW 9-10A</td>
       <td>75 Evans</td>
-      <td>Cho, P J</td>
+      <td>Cho, Paul</td>
     </tr>
     <tr>
       <td>103</td>
       <td>MW 9-10A</td>
       <td>81 Evans</td>
-      <td>Temani, G</td>
+      <td>Temani, Gaurav</td>
     </tr>
     <tr>
       <td>104</td>
       <td>MW 10-11A</td>
-      <td>3109 ETCHEVERRY</td>
-      <td>Pear, V A</td>
+      <td>3109 Etcheverry</td>
+      <td>Pear, Veronica</td>
     </tr>
     <tr>
       <td>105</td>
       <td>MW 10-11A</td>
-      <td>3111 ETCHEVERRY</td>
-      <td>Temani, G</td>
+      <td>3111 Etcheverry</td>
+      <td>Temani, Gaurav</td>
     </tr>
     <tr>
       <td>106</td>
       <td>MW 10-11A</td>
-      <td>334 EVANS</td>
-      <td>Lee, D H</td>
+      <td>334 Evans</td>
+      <td>Lee, Daniel</td>
     </tr>
     <tr>
       <td>107</td>
       <td>MW 11-12P</td>
-      <td>85 EVANS</td>
-      <td>Cho, P J</td>
+      <td>85 Evans</td>
+      <td>Cho, Paul</td>
     </tr>
     <tr>
       <td>108</td>
       <td>MW 11-12P</td>
       <td>9 Evans</td>
-      <td>Pear, V A</td>
+      <td>Pear, Veronica</td>
     </tr>
     <tr>
       <td>109</td>
       <td>MW 11-12P</td>
       <td>87 Evans</td>
-      <td>Nadagouda, P</td>
+      <td>Nadagouda, Pratik</td>
     </tr>
     <tr>
       <td>110</td>
       <td>MW 1-2P</td>
       <td>85 Evans</td>
-      <td>Brooks, J S</td>
+      <td>Brooks, Jordan</td>
     </tr>
     <tr>
       <td>111</td>
       <td>MW 1-2P</td>
       <td>75 Evans</td>
-      <td>Singh, P</td>
+      <td>Singh, Preet</td>
     </tr>
     <tr>
       <td>112</td>
       <td>MW 2-3P</td>
       <td>2 Evans</td>
-      <td>Nadagouda, P</td>
+      <td>Nadagouda, Pratik</td>
     </tr>
     <tr>
       <td>113</td>
       <td>MW 2-3P</td>
       <td>4 Evans</td>
-      <td>Singh, P</td>
+      <td>Singh, Preet</td>
     </tr>
     <tr>
       <td>114</td>
       <td>MW 3-4P</td>
       <td>75 Evans</td>
-      <td>Brooks, J S</td>
+      <td>Brooks, Jordan</td>
     </tr>
     <tr>
       <td>115</td>
       <td>MW 3-4P</td>
       <td>71 Evans</td>
-      <td>Sriram, A</td>
+      <td>Sriram, Ashwini</td>
     </tr>
     <tr>
       <td>117</td>
       <td>MW 4-5P</td>
       <td>4 Evans</td>
-      <td>Sriram, A</td>
+      <td>Sriram, Ashwini</td>
     </tr>
   </tbody>
 </table>
