include room number for OH

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ Introduction to statistical and critical thinking, including descriptive statist
 <ul>
   <li><b>Instructor:</b> <a href="http://gastonsanchez.com" target="_blank">Gaston Sanchez</a>
   <li><b>email:</b> <code>gaston.stat at gmail.com</code> (see <a href="syllabus#email-policy">email policy</a>)
-  <li><b>OH:</b> TuTh 2:15pm-3:00pm</li>
+  <li><b>OH:</b> TuTh 2:15pm-3:00pm in 309 <a href="https://www.google.com/maps/place/Evans+Hall,+Berkeley,+CA+94720/@37.8736514,-122.2599831,17z/data=!3m1!4b1!4m2!3m1!1s0x80857c24710a32ef:0x555901244b6a4c65" target="_blank">Evans Hall</a></li>
   <li><b>Session Dates:</b> 01/19/16 - 05/17/16 </li>
   <li><b>Class:</b> TuTh 9:30-11:00 in 155 <a href="https://www.google.com/maps/search/Univ+Cal+Berkeley+Dwinelle+Hall/@37.870918,-122.2629026" target="_blank">Dwinelle Hall</a></li>
   <li><b>Textbook:</b> Statistics (by Freedman, Pisani, and Purves)</li>
