update assigned GSI to discussions, and their OH

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ Introduction to statistical and critical thinking, including descriptive statist
       <td>109</td>
       <td>MW 11-12P</td>
       <td>87 Evans</td>
-      <td>Nadagouda, Pratik</td>
+      <td>Sriram, Ashwini</td>
     </tr>
     <tr>
       <td>110</td>
@@ -98,7 +98,7 @@ Introduction to statistical and critical thinking, including descriptive statist
       <td>111</td>
       <td>MW 1-2P</td>
       <td>75 Evans</td>
-      <td>Singh, Preet</td>
+      <td>Sriram, Ashwini</td>
     </tr>
     <tr>
       <td>112</td>
@@ -122,14 +122,51 @@ Introduction to statistical and critical thinking, including descriptive statist
       <td>115</td>
       <td>MW 3-4P</td>
       <td>71 Evans</td>
-      <td>Sriram, Ashwini</td>
+      <td>Singh, Preet</td>
     </tr>
     <tr>
       <td>117</td>
       <td>MW 4-5P</td>
       <td>4 Evans</td>
-      <td>Sriram, Ashwini</td>
+      <td>Nadagouda, Pratik</td>
     </tr>
   </tbody>
 </table>
+
+
+<hr>
+
+<h4>GSI's Office Hours</h4>
+
+<table>
+  <thead>
+    <tr>
+      <th align="left">GSI</th>
+      <th align="left">OH</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>Paul Cho</td>
+      <td>Mo 2:30-3:30, Tu 11:00-12:30</td>
+    </tr>
+    <tr>
+      <td>Gaurav Temani</td>
+      <td>W 1:00-2:00</td>
+    </tr>
+    <tr>
+      <td>Veronica Pear</td>
+      <td>W12:30-2:00, Th 12:30-3:00</td>
+    </tr>
+    <tr>
+      <td>Preet Singh</td>
+      <td>W 11:00-1:00</td>
+    </tr>
+    <tr>
+      <td>Ashwini Sriram</td>
+      <td>M 11:00-2:00</td>
+    </tr>
+  </tbody>
+</table>
+
 
