add OH of Daniel Lee

--- a/index.html
+++ b/index.html
@@ -147,6 +147,10 @@ Introduction to statistical and critical thinking, including descriptive statist
   </thead>
   <tbody>
     <tr>
+      <td>Daniel Lee (446 Evans)</td>
+      <td>TuTh 8:00-9:30, W 4:00-5:00</td>
+    </tr>
+    <tr>
       <td>Paul Cho</td>
       <td>Mo 2:30-3:30, Tu 11:00-12:30</td>
     </tr>
@@ -163,7 +167,7 @@ Introduction to statistical and critical thinking, including descriptive statist
       <td>W 11:00-1:00</td>
     </tr>
     <tr>
-      <td>Ashwini Sriram</td>
+      <td>Ashwini Sriram (444 Evans)</td>
       <td>M 11:00-2:00</td>
     </tr>
   </tbody>
