index: add Student Learning Center information

--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@ Introduction to statistical and critical thinking, including descriptive statist
   <li><b>Class:</b> TuTh 9:30-11:00 in 155 <a href="https://www.google.com/maps/search/Univ+Cal+Berkeley+Dwinelle+Hall/@37.870918,-122.2629026" target="_blank">Dwinelle Hall</a></li>
   <li><b>Textbook:</b> Statistics (by Freedman, Pisani, and Purves)</li>
   <li><b>Final:</b> Wed, May-11, 11:30-2:30</li>
+  <li><b>SLC:</b> <a href="http://slc.berkeley.edu/statistics-2" target="_blank">stat 2 services</a>
+    <ul>
+      <li>Study Group: TuTh 115 Chavez</li>
+      <li>Drop-In Tutoring: Mon-Thu 10-4</li>
+    </ul>
+  </li>
 </ul>
 
 <hr>
