index: moved GSI First name before Last name

--- a/index.html
+++ b/index.html
@@ -44,97 +44,97 @@ Introduction to statistical and critical thinking, including descriptive statist
       <td>101</td>
       <td>MW 9-10A</td>
       <td>71 Evans</td>
-      <td>Lee, Daniel</td>
+      <td>Daniel Lee</td>
     </tr>
     <tr>
       <td>102</td>
       <td>MW 9-10A</td>
       <td>75 Evans</td>
-      <td>Cho, Paul</td>
+      <td>Paul Cho</td>
     </tr>
     <tr>
       <td>103</td>
       <td>MW 9-10A</td>
       <td>81 Evans</td>
-      <td>Temani, Gaurav</td>
+      <td>Gaurav Temani</td>
     </tr>
     <tr>
       <td>104</td>
       <td>MW 10-11A</td>
       <td>3109 Etcheverry</td>
-      <td>Pear, Veronica</td>
+      <td>Veronica Pear</td>
     </tr>
     <tr>
       <td>105</td>
       <td>MW 10-11A</td>
       <td>3111 Etcheverry</td>
-      <td>Temani, Gaurav</td>
+      <td>Gaurav Temani</td>
     </tr>
     <tr>
       <td>106</td>
       <td>MW 10-11A</td>
       <td>334 Evans</td>
-      <td>Lee, Daniel</td>
+      <td>Daniel Lee</td>
     </tr>
     <tr>
       <td>107</td>
       <td>MW 11-12P</td>
       <td>85 Evans</td>
-      <td>Cho, Paul</td>
+      <td>Paul Cho</td>
     </tr>
     <tr>
       <td>108</td>
       <td>MW 11-12P</td>
       <td>9 Evans</td>
-      <td>Pear, Veronica</td>
+      <td>Veronica Pear</td>
     </tr>
     <tr>
       <td>109</td>
       <td>MW 11-12P</td>
       <td>87 Evans</td>
-      <td>Sriram, Ashwini</td>
+      <td>Ashwini Sriram</td>
     </tr>
     <tr>
       <td>110</td>
       <td>MW 1-2P</td>
       <td>85 Evans</td>
-      <td>Brooks, Jordan</td>
+      <td>Jordan Brooks</td>
     </tr>
     <tr>
       <td>111</td>
       <td>MW 1-2P</td>
       <td>75 Evans</td>
-      <td>Sriram, Ashwini</td>
+      <td>Ashwini Sriram</td>
     </tr>
     <tr>
       <td>112</td>
       <td>MW 2-3P</td>
       <td>2 Evans</td>
-      <td>Nadagouda, Pratik</td>
+      <td>Pratik Nadagouda</td>
     </tr>
     <tr>
       <td>113</td>
       <td>MW 2-3P</td>
       <td>4 Evans</td>
-      <td>Singh, Preet</td>
+      <td>Preet Singh</td>
     </tr>
     <tr>
       <td>114</td>
       <td>MW 3-4P</td>
       <td>75 Evans</td>
-      <td>Brooks, Jordan</td>
+      <td>Jordan Brooks</td>
     </tr>
     <tr>
       <td>115</td>
       <td>MW 3-4P</td>
       <td>71 Evans</td>
-      <td>Singh, Preet</td>
+      <td>Preet Singh</td>
     </tr>
     <tr>
       <td>117</td>
       <td>MW 4-5P</td>
       <td>4 Evans</td>
-      <td>Nadagouda, Pratik</td>
+      <td>Pratik Nadagouda</td>
     </tr>
   </tbody>
 </table>
