index: updated Preet's OH

--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@ Introduction to statistical and critical thinking, including descriptive statist
       <td>W12:30-2:00, Th 12:30-3:00</td>
     </tr>
     <tr>
-      <td>Preet Singh</td>
-      <td>W 11:00-1:00</td>
+      <td>Preet Singh (444/446 Evans)</td>
+      <td>MW 12:00-2:00</td>
     </tr>
     <tr>
       <td>Ashwini Sriram (444 Evans)</td>
